--- a/style/navbar.css
+++ b/style/navbar.css
@@ -1,3 +1,4 @@
+
 .navbar {
   display: flex;
   padding: 5px;
@@ -5,6 +6,9 @@
   width: 100%;
   background-color: rgb(35, 34, 34);
   justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 100;
   align-items: center;
   color: white;
 }
