--- a/style/body.css
+++ b/style/body.css
@@ -1,5 +1,23 @@
-.courses{
+.page{
     height: 200vh;
-    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(7,69,191,1) 100%);
+    width: 100%;
+    background-color: rgb(60, 65, 72);
+    display: flex;
+    flex-direction: column;
+}
+
+.header{
+    width: 100%;
+    padding: 3.5%;
+}
+
+/* Talvez mudar o nome!! a borda é apenas para ver as dimensões!! */
+.informations{
+    width: 70%;
+    border-style: solid;
+    border-radius: 2px;
+    margin-right: 20%;
+    margin-left: 10%;
+    padding: 2%;
 
 }
