--- a/style/index.css
+++ b/style/index.css
@@ -5,7 +5,7 @@
 
 .title{
     font-size: 3.5rem;
-    font-weight: bold;
+    font-weight: 400;
     justify-content: center;
     text-align: center;
     padding: 3.5%;
@@ -24,3 +24,14 @@
     justify-content: center;
     text-align: justify;
 }
+
+ul {
+    list-style: none;
+  }
+  
+  li:before {
+    content: "-->";
+    padding-right: 5px;
+  }
+  
+  
