--- a/style/index.css
+++ b/style/index.css
@@ -2,36 +2,12 @@
 @import "./navbar.css";
 @import "./body.css";
 @import "./styleM.css";
+@import "./modelagemDados.css";
 
-.title{
-    font-size: 3.5rem;
-    font-weight: 400;
-    justify-content: center;
-    text-align: center;
-    padding: 3.5%;
+.page{
+    height: 200vh;
+    width: 100%;
+    background-color: rgb(60, 65, 72);
+    display: flex;
+    flex-direction: column;
 }
-
-.subtitleText{
-    font-size: 2.5rem;
-    font-weight: lighter;
-    padding-top: 1%;
-    padding-bottom: 1%;
-}
-
-.text{
-    font-size: 1.5rem;
-    font-weight: lighter;
-    justify-content: center;
-    text-align: justify;
-}
-
-ul {
-    list-style: none;
-  }
-  
-  li:before {
-    content: "-->";
-    padding-right: 5px;
-  }
-  
-  
