--- a/style/modelagemDados.css
+++ b/style/modelagemDados.css
@@ -2,6 +2,7 @@
     height: auto;
     width: 100%;
     background-color: rgb(38, 42, 46);
+    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(4,42,140,1) 35%, rgba(0,114,255,1) 100%);
     display: flex;
     flex-direction: column;
 }
@@ -22,7 +23,7 @@
     border-width: 1px;
     padding: 2%;
     margin-bottom: 5%;
-    background-color: rgb(47, 51, 56);
+    background-color: rgba(47, 51, 56, 0);
 }
 
 .image-container {
