Correct names in file

--- a/style/index.css
+++ b/style/index.css
@@ -1,8 +1,8 @@
 @import "./default.css";
 @import "./navbar.css";
 @import "./body.css";
-@import "./styleM.css";
-@import "./modelagemDados.css";
+@import "./howToModelData.css";
+@import "./introductionToDataModeling.css";
 @import "./mainStepsToDataModeling.css";
 
 .page{
