--- a/style/introductionToDataModeling.css
+++ b/style/introductionToDataModeling.css
@@ -67,9 +67,6 @@
     text-align: justify;
 }
 
-ul {
-    list-style: none;
-}
   
 .li-introductionToDataModeling:before {
     content: "-->";
@@ -120,4 +117,47 @@ ul {
       font-size: 1rem;
       letter-spacing: 0.5px;
   }
+  .header{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 30px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1;
+}
+.logo{
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 2em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+.ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin-left: 20px; 
+    text-decoration: none;
+    padding: 6px 15px;
+}
+.li{
+    list-style: none;
+    margin-left: 20px; 
+    text-decoration: none;
+    padding: 6px 15px;
+}
+.a{
+    text-decoration: none;
+    padding: 6px 15px;
+}
+.a:hover, #active{
+    background: #fff;
+    color: rgba(0,114,255,1);
+    border-radius: 20px;
+    
+}
 }
