adding new css to the index

--- a/style/index.css
+++ b/style/index.css
@@ -4,6 +4,7 @@
 @import "./introductionToDataModeling.css";
 @import "./mainStepsToDataModeling.css";
 @import "./howToModelData.css";
+@import "./conceptualModel.css";
 
 .page{
     height: 200vh;
