--- a/style/conceptualModel.css
+++ b/style/conceptualModel.css
@@ -51,29 +51,17 @@
     border-radius: 20px;
 }
 
-.section {
+.image-container {
     position: relative;
-    width: 100%;
-    height: 100vh;
-    padding: 5%;
+    width: auto;
     display: flex;
     justify-content: center;
-    align-items: center;
-}
-
-.section .img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: auto;
-    object-fit: cover;
 }
 
 .img {
-    opacity: 0.4;
-    height: auto;
     width: 100%;
+    height: auto;
+    opacity: 0.4;
 }
 
 .title{
