--- a/style/conceptualModel.css
+++ b/style/conceptualModel.css
@@ -64,6 +64,12 @@
     opacity: 0.4;
 }
 
+.text-img{
+    width: 100%;
+    height: auto;
+    opacity: 0.6;
+}
+
 .title{
     font-size: 2rem;
     font-weight: 400;
