--- a/style/mainStepsToDataModeling.css
+++ b/style/mainStepsToDataModeling.css
@@ -2,6 +2,10 @@ ol > .li-mainStepsToDataModeling::before {
     content: "";
 }
 
+.li-mainStepsToDataModeling{
+    list-style: none;
+}
+
 ul > .li-mainStepsToDataModeling::before {
     content: "○";
     margin-right: 1%;
@@ -50,13 +54,26 @@ ul > .li-mainStepsToDataModeling::before {
     
 }
 
+.title-mainStepsToDataModeling{
+    font-size: 2.8rem;
+    font-weight: 650;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #7ddcfa;
+    z-index: 10;
+    white-space: nowrap;
+    text-align: center;
+    word-break: break-word;
+}
+
 .li-mainStepsToDataModeling {
     margin-left: 3%;
 }
   @media (max-width: 768px){
-    .title{
+    .title-mainStepsToDataModeling{
       font-size: 1.6rem;
-      white-space: pre-wrap;
   }
   .subtitle-text{
       font-size: 1.3rem;
@@ -70,7 +87,7 @@ ul > .li-mainStepsToDataModeling::before {
 }
 
   @media (max-width: 480px){
-      .title{
+    .title-mainStepsToDataModeling{
         font-size: 1.4rem;
     }
     .subtitle-text{
@@ -85,7 +102,7 @@ ul > .li-mainStepsToDataModeling::before {
 }
 
 @media (max-width: 328px){
-  .title{
+    .title-mainStepsToDataModeling{
     font-size: 1.2rem;
   }
   .subtitle-text{
