--- a/style/index.css
+++ b/style/index.css
@@ -67,7 +67,7 @@
 }
 
 .physic_model {
-    background-image: url("../assets/physic_model.webp");
+    background-image: url("../assets/physic_model.jpeg");
 }
 
 .logic_model {
