update image of a card

--- a/style/index.css
+++ b/style/index.css
@@ -51,7 +51,7 @@
 }
 
 .how-to-model-data {
-    background-image: url("../assets/ModelagemDeDados.png");
+    background-image: url("../assets/modeling-data.jpeg");
 }
 
 .main-function-model-data {
