--- a/style/howTobuilEfficientDB.css
+++ b/style/howTobuilEfficientDB.css
@@ -1,20 +1,3 @@
-.page-dataBase{
-    height: auto;
-    width: 100%;
-    background-color: rgb(38, 42, 46);
-    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(4,42,140,1) 35%, rgba(0,114,255,1) 100%);
-    display: flex;
-    flex-direction: column;
-}
-
-.li-dataBase{
-    margin-left: 5%;
-    margin-top: 3%;
-}
-.p-dataBase{
-    margin-left: 5%;
-}
-
 .title-DB{
     font-size: 2.8rem;
     font-weight: 650;
@@ -29,10 +12,89 @@
     word-break: break-word;
 }
 
+.subtitle-text-DB{
+    font-size: 2.5rem;
+    font-weight: lighter;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.text-DB{
+    font-size: 1.5rem;
+    font-weight: lighter;
+    justify-content: center;
+    text-align: justify;
+}
+
+.page-dataBase{
+    height: auto;
+    width: 100%;
+    background-color: rgb(38, 42, 46);
+    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(4,42,140,1) 35%, rgba(0,114,255,1) 100%);
+    display: flex;
+    flex-direction: column;
+}
+
+.container-dataBase{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 10%;
+}
+
+.text-container-dataBase{
+    width: 70%;
+    padding: 2%;
+    margin-bottom: 5%;
+    background-color: rgba(47, 51, 56, 0);
+}
+
+.section-dataBase{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: 5%;     
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-dataBase .img-dataBase{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.img-dataBase{
+    opacity: 0.4;
+}
+
+.li-dataBase{
+    margin-left: 5%;
+    margin-top: 3%;
+}
+.p-dataBase{
+    margin-left: 5%;
+}
+
 
 @media (max-width: 768px){
     .title-DB{
         font-size: 2rem;
+    }
+    .subtitle-text-DB{
+        font-size: 1.3rem;
+        padding-top: 5%;
+        padding-bottom: 5%;
+        text-align: center
+    }
+    .text-DB{
+        font-size: 1.1rem;
     }
     .header, .ul{
         flex-direction: column;
@@ -44,6 +106,31 @@
 
 @media (max-width: 480px){
     .title-DB{
-        font-size: 1.5rem;
+        font-size: 1.4rem;
+    }
+    .subtitle-text-DB{
+        font-size: 1.3rem;
+        padding-top: 5%;
+        padding-bottom: 5%;
+        text-align: center
+    }
+    .text-DB{
+        font-size: 1.1rem;
+    }
+}
+
+@media (max-width: 328px){
+    .title-DB{
+        font-size: 1.3rem;
+    }
+    .subtitle-text-DB{
+        font-size: 1.2rem;
+        padding-top: 5%;
+        padding-bottom: 5%;
+        text-align: center
+    }
+    .text-DB{
+        font-size: 1rem;
+        letter-spacing: 0.5px;
     }
 }
