--- a/style/introductionToDataModeling.css
+++ b/style/introductionToDataModeling.css
@@ -1,44 +1,3 @@
-
-.page-modelagem{
-    height: auto;
-    width: 100%;
-    background-color: rgb(38, 42, 46);
-    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(4,42,140,1) 35%, rgba(0,114,255,1) 100%);
-    display: flex;
-    flex-direction: column;
-}
-
-.container{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin-bottom: 10%;
-}
-
-/* Talvez mudar o nome!! a borda é apenas para ver as dimensões!! */
-.text-container{
-    width: 70%;
-
-    padding: 2%;
-    margin-bottom: 5%;
-    background-color: rgba(47, 51, 56, 0);
-}
-
-.image-container {
-    position: relative;
-    width: auto;
-    display: flex;
-    justify-content: center;
-}
-
-.img {
-    width: 100%;
-    height: auto;
-    opacity: 0.6;
-}
-
 .title-introductionToDataModeling{
     font-size: 2.8rem;
     font-weight: 650;
@@ -53,19 +12,68 @@
     word-break: break-word;
 }
 
-.subtitle-text{
+.subtitle-text-introductionToDataModeling{
     font-size: 2.5rem;
     font-weight: lighter;
     padding-top: 1%;
     padding-bottom: 1%;
 }
 
-.text{
+.text-introductionToDataModeling{
     font-size: 1.5rem;
     font-weight: lighter;
     justify-content: center;
     text-align: justify;
 }
+
+.page-introductionToDataModeling{
+    height: auto;
+    width: 100%;
+    background-color: rgb(38, 42, 46);
+    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(4,42,140,1) 35%, rgba(0,114,255,1) 100%);
+    display: flex;
+    flex-direction: column;
+}
+
+.container-introductionToDataModeling{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 10%;
+}
+
+.text-container-introductionToDataModeling{
+    width: 70%;
+    padding: 2%;
+    margin-bottom: 5%;
+    background-color: rgba(47, 51, 56, 0);
+}
+
+.section-introductionToDataModeling{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: 5%;     
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-introductionToDataModeling .img-introductionToDataModeling{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.img-introductionToDataModeling{
+    opacity: 0.4;
+}
+
 .li-introductionToDataModeling{
     list-style: none;
 }
@@ -118,13 +126,13 @@
     .title-introductionToDataModeling{
       font-size: 2rem;
   }
-  .subtitle-text{
+  .subtitle-text-introductionToDataModeling{
       font-size: 1.3rem;
       padding-top: 5%;
       padding-bottom: 5%;
       text-align: center
   }
-  .text{
+  .text-introductionToDataModeling{
       font-size: 1.1rem;
       text-align: left;
   }
@@ -134,28 +142,28 @@
       .title-introductionToDataModeling{
         font-size: 1.5rem;
     }
-    .subtitle-text{
+    .subtitle-text-introductionToDataModeling{
         font-size: 1.3rem;
         padding-top: 5%;
         padding-bottom: 5%;
         text-align: center
     }
-    .text{
+    .text-introductionToDataModeling{
         font-size: 1.1rem;
     }
 }
 
 @media (max-width: 328px){
   .title-introductionToDataModeling{
-    font-size: 1.2rem;
+    font-size: 1.3rem;
   }
-  .subtitle-text{
+  .subtitle-text-introductionToDataModeling{
       font-size: 1.2rem;
       padding-top: 5%;
       padding-bottom: 5%;
       text-align: center;
   }
-  .text{
+  .text-introductionToDataModeling{
       font-size: 1rem;
       letter-spacing: 0.5px;
   }
