--- a/style/howToModelData.css
+++ b/style/howToModelData.css
@@ -1,26 +1,80 @@
-ol > .li-mainStepsToDataModeling::before {
-    content: "";
+.title-howTomodelData{
+    font-size: 2.8rem;
+    font-weight: 650;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #7ddcfa;
+    z-index: 10;
+    white-space: nowrap;
+    text-align: center;
+    word-break: break-word;
 }
 
-.li-mainStepsToDataModeling{
-    list-style: none;
+.subtitle-text-howTomodelData{
+    font-size: 2.5rem;
+    font-weight: lighter;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 
-ul > .li-mainStepsToDataModeling::before {
-    content: "○";
-    margin-right: 1%;
+.text-howTomodelData{
+    font-size: 1.5rem;
+    font-weight: lighter;
+    justify-content: center;
+    text-align: justify;
 }
-.header{
+
+.page-howTomodelData{
+    height: auto;
+    width: 100%;
+    background-color: rgb(38, 42, 46);
+    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(4,42,140,1) 35%, rgba(0,114,255,1) 100%);
+    display: flex;
+    flex-direction: column;
+}
+
+.container-howTomodelData{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 10%;
+}
+
+.text-container-howTomodelData{
+    width: 70%;
+    padding: 2%;
+    margin-bottom: 5%;
+    background-color: rgba(47, 51, 56, 0);
+}
+
+.section-howTomodelData{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: 5%;     
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-howTomodelData .img-howTomodelData{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    padding: 30px 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 1;
+    height: auto;
+    object-fit: cover;
 }
+
+.img-howTomodelData{
+    opacity: 0.4;
+}
+
+
 
 .logo{
     font-weight: 700;
@@ -29,31 +83,7 @@ ul > .li-mainStepsToDataModeling::before {
     text-transform: uppercase;
     letter-spacing: 2px;
 }
-.ul{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    margin-left: 20px; 
-    text-decoration: none;
-    padding: 6px 15px;
-}
-.li{
-    list-style: none;
-    margin-left: 20px; 
-    text-decoration: none;
-    padding: 6px 15px;
-}
-.a{
-    text-decoration: none;
-    padding: 6px 15px;
-}
-.a:hover, #active{
-    background: #fff;
-    color: rgba(0,114,255,1);
-    border-radius: 20px;
-    
-}
+
 
 .title-mainStepsToDataModeling{
     font-size: 2.8rem;
@@ -69,69 +99,61 @@ ul > .li-mainStepsToDataModeling::before {
     word-break: break-word;
 }
 
-.li-mainStepsToDataModeling {
-    margin-left: 3%;
-}
-  @media (max-width: 768px){
-    .title-mainStepsToDataModeling{
-      font-size: 1.6rem;
-  }
-  .subtitle-text{
-      font-size: 1.3rem;
-      padding-top: 5%;
-      padding-bottom: 5%;
-      text-align: center
-  }
-  .text{
-      font-size: 1.1rem;
-  }
-}
-
-  @media (max-width: 480px){
-    .title-mainStepsToDataModeling{
-        font-size: 1.4rem;
+    @media (max-width: 768px){
+        .title-howTomodelData{
+            font-size: 2rem;
+        }
+        .subtitle-text-howTomodelData{
+            font-size: 1.3rem;
+            padding-top: 5%;
+            padding-bottom: 5%;
+            text-align: center
+        }
+        .text-howTomodelData{
+            font-size: 1.1rem;
+        }
+        .header{
+            display: flex;
+            flex-direction: column;
+            width: 100vw;
+            align-items: center;
+            justify-content: center;
+        }
+        .li {
+            padding-right: 50px;
+        }
+        .p{
+            text-align: left;
+        }
     }
-    .subtitle-text{
-        font-size: 1.3rem;
-        padding-top: 5%;
-        padding-bottom: 5%;
-        text-align: center
+    
+    @media (max-width: 480px){
+        .title-howTomodelData{
+            font-size: 1.4rem;
+        }
+        .subtitle-text-howTomodelData{
+            font-size: 1.3rem;
+            padding-top: 5%;
+            padding-bottom: 5%;
+            text-align: center
+        }
+        .text-howTomodelData{
+            font-size: 1.1rem;
+        }
     }
-    .text{
-        font-size: 1.1rem;
+    
+    @media (max-width: 328px){
+        .title-howTomodelData{
+            font-size: 1.3rem;
+        }
+        .subtitle-text-howTomodelData{
+            font-size: 1.2rem;
+            padding-top: 5%;
+            padding-bottom: 5%;
+            text-align: center
+        }
+        .text-howTomodelData{
+            font-size: 1rem;
+            letter-spacing: 0.5px;
+        }
     }
-}
-
-@media (max-width: 328px){
-    .title-mainStepsToDataModeling{
-    font-size: 1.2rem;
-  }
-  .subtitle-text{
-      font-size: 1.2rem;
-      padding-top: 5%;
-      padding-bottom: 5%;
-      text-align: center;
-  }
-  .text{
-      font-size: 1rem;
-      letter-spacing: 0.5px;
-  }
-  
-}
-
-@media (max-width: 328px){
-    .title-mainStepsToDataModeling{
-    font-size: 1.2rem;
-  }
-  .subtitle-text{
-      font-size: 1.2rem;
-      padding-top: 5%;
-      padding-bottom: 5%;
-      text-align: center;
-  }
-  .text{
-      font-size: 1rem;
-      letter-spacing: 0.5px;
-  }
-  
-}
